<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_market"
            android:icon="@drawable/ic_baseline_market_24"
            android:title="@string/menu_market" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_outline_24"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="@string/menu_utilities">

        <menu>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/menu_logout" />
        </menu>

    </item>
</menu>