<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_market">

    <fragment
        android:id="@+id/nav_market"
        android:name="com.androidstrike.osefi.landing.fragments.Market"
        android:label="@string/menu_market"
        tools:layout="@layout/fragment_market" />
    <fragment
        android:id="@+id/nav_search"
        android:name="com.androidstrike.osefi.landing.fragments.Search"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.androidstrike.osefi.landing.fragments.Profile"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>