<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_sign_up"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.SignUp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_baseline_person_add_24"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/black"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:id="@+id/cv_sign_up"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:hint="@string/hint_new_user_name"
            android:id="@+id/et_new_user_name"
            android:inputType="text"
            android:drawableStart="@drawable/ic_baseline_person_outline_24" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:hint="@string/hint_new_email"
            android:id="@+id/et_new_email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_baseline_email_24" />


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:hint="@string/hint_new_password"
                    android:id="@+id/et_new_password"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_baseline_lock_24" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:hint="@string/hint_new_confirm_password"
                    android:id="@+id/et_new_confirm_password"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_baseline_lock_24" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    app:ccp_countryPreference="NG,US"
                    app:ccp_defaultPhoneCode="234"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:hint="@string/hint_new_phone_number"
                    android:id="@+id/et_new_phone_number"
                    android:inputType="phone"
                    android:maxLength="11"/>
            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_sign_up"
        android:layout_below="@id/cv_sign_up"
        android:id="@+id/button_sign_up"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_login_instead"
        android:layout_below="@id/button_sign_up"
        android:id="@+id/tv_login_instead"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:id="@+id/pb_sign_up"/>

</RelativeLayout>