<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.SignIn">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_baseline_person_outline_24"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:id="@+id/cv_login"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:hint="@string/hint_new_email"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_baseline_email_24" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:hint="@string/hint_new_password"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_baseline_lock_24" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_sign_in"
            android:id="@+id/button_sign_in"
            android:layout_below="@id/cv_login"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_new_account"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:id="@+id/tv_new_account"
            android:layout_below="@id/button_sign_in"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_forgot_password"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:id="@+id/tv_forgot_password"
            android:layout_below="@id/tv_new_account"/>


        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/progress_sign_in"/>


    </RelativeLayout>

</LinearLayout>