<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    tools:context=".auth.PasswordReset">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/oops_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

        <RelativeLayout
            android:id="@+id/loginLayout"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/text_forgot_password"
                android:textColor="#fff"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <androidx.cardview.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_title"
                android:background="#fff"
                android:layout_margin="16dp"
                android:elevation="4dp"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="24dp"
                    android:paddingTop="30dp">

                    <TextView
                        android:textAlignment="center"
                        android:text="@string/text_enter_email_for_password_reset"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black"
                        android:fontFamily="sans-serif-light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal" />

                    <EditText
                        android:id="@+id/text_recover_email"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_email_24"
                        android:drawablePadding="10dp"
                        android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"/>


                    <Button
                        android:id="@+id/button_reset_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp"
                        android:background="#d67601"
                        android:text="Reset Password"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="18sp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progressbar"
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>



</RelativeLayout>